# chetaku-rs

./: .env.example  ANTIGRAVITY.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deploy.sh
.claude/: settings.json
.claude/hooks/: pre-commit-check.sh
.claude/skills/deploy-chetaku-rs/: SKILL.md
.github/workflows/: deploy.yml
docs/: API.md  ARCHITECTURE.md
migrations/: 001_media_entries.sql  002_strava_activities.sql  003_stats_cache.sql  004_voyages.sql
src/: db.rs  error.rs  main.rs  models.rs
src/routes/: admin.rs  blog.rs  contact.rs  cycling.rs  health.rs  media.rs  mod.rs  portfolio.rs  stats.rs  sync.rs  update.rs  voyage.rs
src/sync/: jikan.rs  mod.rs  rawg.rs  strava.rs  tmdb.rs
