[package]
name = "chetaku-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chetaku"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "macros"] }

# HTTP client (Jikan + RAWG)
reqwest = { version = "0.12", features = ["json"] }

# Sérialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config / env
dotenvy = "0.15"

# Logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Erreurs
anyhow = "1"
thiserror = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
